BLOG-191 prevent horizontal scrollbar

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2507,5 +2507,5 @@ Usage (In Ghost editor):
     align-self: end;
     padding-right: 18px;
     max-height: 360px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
